Starting the RNN project

--- a/Artificial NN/ANN.ipynb
+++ b/Artificial NN/ANN.ipynb
@@ -1325,7 +1325,15 @@
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.2, random_state=42)\n",
     "\n",
-    "sc = StandardScaler() # the values have to be scaled\n",
+    "sc = StandardScaler() # the values have to be scaled. This is a STANDARIZATION since the formula applied is: \n",
+    "\n",
+    "# X_scaled = (X_real - u) / theta\n",
+    "\n",
+    "# Where \"u\" is the the mean and \"theta\" the standar desviation.\n",
+    "\n",
+    "# This transformation is highly recommended when working with ANN\n",
+    "\n",
+    "\n",
     "X_train_scaled = sc.fit_transform(X_train)\n",
     "X_test_scaled = sc.transform(X_test)"
    ]
