--- a/Convolutional NN/CNN.ipynb
+++ b/Convolutional NN/CNN.ipynb
@@ -360,7 +360,7 @@
     "    if final_output >= 0.5: \n",
     "        return (int(round(100*final_output,0)), 'dog') \n",
     "    elif final_output < 0.5: \n",
-    "        return (int(round(100*(1-final_output),0)), 'dog') \n",
+    "        return (int(round(100*(1-final_output),0)), 'cat') \n",
     "    else:\n",
     "        return (0,'Something went Wrong, the result is neither dog or cat')\n",
     "    \n",
