Creating manual K-means

--- a/Self Organizing Maps/SOM.ipynb
+++ b/Self Organizing Maps/SOM.ipynb
@@ -287,9 +287,7 @@
    "source": [
     "from sklearn.preprocessing import MinMaxScaler\n",
     "sc = MinMaxScaler(feature_range=(0,1)) # We have to normalize before everything, since we are going to use euclydian distance.\n",
-    "sc.fit_transform(X)\n",
-    "\n",
-    "\n"
+    "sc.fit_transform(X)\n"
    ]
   }
  ],
