--- a/(UN) K-Means/Manual_K_means.ipynb
+++ b/(UN) K-Means/Manual_K_means.ipynb
@@ -275,19 +275,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def normalizer(array):\n",
-    "     max = max(array)\n",
-    "     min = min(array)\n",
-    "     array_normalized = \n",
+    "def number_normalizer(number, min, max):\n",
+    "    return (number-min)/(max-min)\n",
     "\n",
-    "def number_normalizer(number, minimun, maximun):\n",
-    "     return (number-minimun)/(maximun-minimun)\n",
-    "\n"
+    "def normalizer(array):\n",
+    "    \n",
+    "    if array.ndim == 1:\n",
+    "        minimun = min(array)\n",
+    "        maximun = max(array)\n",
+    "        return [number_normalizer(x, minimun, maximun) for x in array]\n",
+    "    ## elif array.ndim == 2:\n",
+    "        #insert code here\n",
+    "    else: \n",
+    "        raise ValueError(\"El array debe ser unidimensional\")\n",
+    "    \n",
+    "### We also need to add the case if it gets a 2d or more array. But let's do that later \n",
+    "\n",
+    "mean_heights_normalized = normalizer(mean_heights)\n",
+    "mean_margins_normalized = normalizer(mean_margins)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "104.905\n",
+      "103.03999999999999\n",
+      "103.50999999999999\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(max(mean_heights))\n",
+    "print(min(mean_heights))\n",
+    "print(mean_heights[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mean_heights_normalized[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
