start of second part k means

--- a/(UN) K-Means/Manual_K_means.ipynb
+++ b/(UN) K-Means/Manual_K_means.ipynb
@@ -479,6 +479,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part B) Do the Same but actually using SKlearn Library"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
