--- a/Self Organizing Maps/SOM.ipynb
+++ b/Self Organizing Maps/SOM.ipynb
@@ -328,8 +328,8 @@
     "som.random_weights_init(X_scaled) #The initial weights are going to be random\n",
     "\n",
     "# Train the Model\n",
-    "som.train_random(data = X_scaled, num_iteration = 1000) # 2 parameteres that need to be defined: 1) The data itself, 2) the number of iteration over the dataset\n",
-    "                                                        # Since the dataset is small, we are doing 1000 iterations, but it could be more than enought with 50\n"
+    "som.train_random(data = X_scaled, num_iteration = 10000) # 2 parameteres that need to be defined: 1) The data itself, 2) the number of iteration over the dataset\n",
+    "                                                        # Since the dataset is small, we are doing 10000 iterations, but it could be more than enought with 50\n"
    ]
   },
   {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total possible frauds with credit card approved are: 6\n"
+      "Total possible frauds with credit card approved are: 6\n",
+      "Ids of possible frauds: \n",
+      "1) 15684512\n",
+      "2) 15699238\n",
+      "3) 15740458\n",
+      "4) 15802071\n",
+      "5) 15770406\n",
+      "6) 15591107\n"
      ]
     }
    ],
@@ -469,6 +476,7 @@
     "colors = ['r', 'g']\n",
     "\n",
     "frauds_with_card =  np.zeros(Y[:, 1].shape) \n",
+    "list_of_frauds = []\n",
     "\n",
     "for i,x in enumerate(X_scaled): \n",
     "\n",
@@ -476,6 +484,7 @@
     "    if Y[i][1] == 1 and ((w[0] == 1 and w[1] == 1) or (w[0] == 2 and w[1] == 5)): # 1) Got the credicard and 2) it is in one out of the 2 possible outliers\n",
     "        frauds_with_card[i] = 1\n",
     "        print(f\"Fraud detected at index {i}: {frauds_with_card[i]}\")\n",
+    "        list_of_frauds.append(Y[i][0])\n",
     "        plot(w[0] + 0.5, # x axis\n",
     "            w[1] + 0.5, # y axis\n",
     "            markers[Y[i][1]], # Look into the real values to see if the client got the credit approved or not\n",
@@ -486,14 +495,23 @@
     "            )\n",
     "        \n",
     "show()\n",
-    "print(f'Total possible frauds with credit card approved are: ' + str(int(sum(frauds_with_card))))"
+    "print(f'Total possible frauds with credit card approved are: ' + str(int(sum(frauds_with_card))))\n",
+    "print('Ids of possible frauds: ')\n",
+    "for j, id in enumerate(list_of_frauds): \n",
+    "    print(f'{j+1}) {id}')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, let's identify this possible frauds by their id"
+    "Great!! Now that we found these customers, what would you do? \n",
+    "a) Keep it to yourself\n",
+    "b) Telling the risk control team\n",
+    "c) Telling to your boss \n",
+    "d) Another option\n",
+    "\n",
+    "Let me know your opinion at adolfoga1215@gmail.com"
    ]
   },
   {
