small change PS

--- a/Self Organizing Maps/SOM.ipynb
+++ b/Self Organizing Maps/SOM.ipynb
@@ -516,10 +516,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hola\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"hola\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "PS: I was reading a paper that says that according to our dataset very small, 13.000 - 14.000 iterations are probably the best number."
+   ]
   }
  ],
  "metadata": {
