--- a/(UN) K-Means/Manual_K_means.ipynb
+++ b/(UN) K-Means/Manual_K_means.ipynb
@@ -722,11 +722,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As you can see. the 2 groups were pretty semilar to the ones we calculated manually  before. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Finished\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    " "
+   ]
   }
  ],
  "metadata": {
